[gd_scene load_steps=14 format=3 uid="uid://er1uiyaq2g5q"]

[ext_resource type="PackedScene" uid="uid://btcpjdktuymx" path="res://scenes/tile_map.tscn" id="1_01f4n"]
[ext_resource type="Script" path="res://scenes/main_camp_outside.gd" id="1_j6oon"]
[ext_resource type="PackedScene" uid="uid://bhysbh3p85m13" path="res://scenes/christina.tscn" id="2_4f0vb"]
[ext_resource type="PackedScene" uid="uid://c4unx6bdwbf2e" path="res://scenes/actionable.tscn" id="2_uy6f1"]
[ext_resource type="Resource" uid="uid://baw8gciiuwynm" path="res://dialogue/boys_cabin.dialogue" id="3_egqk6"]
[ext_resource type="Texture2D" uid="uid://bdq8ug0ec7q17" path="res://character_sprite/clancy_remake_full.png" id="7_yp5pe"]
[ext_resource type="Resource" uid="uid://bfj6oykysj22h" path="res://dialogue/clancy_dialogue.dialogue" id="8_qdhgp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wcvuq"]
radius = 8.06226

[sub_resource type="CircleShape2D" id="CircleShape2D_oehen"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_64qhm"]
radius = 18.0278

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dn5jm"]
size = Vector2(106, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oxxgf"]
size = Vector2(20, 137)

[sub_resource type="CircleShape2D" id="CircleShape2D_pywer"]

[node name="main_camp_outside" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_j6oon")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -5

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="TileMap" parent="." instance=ExtResource("1_01f4n")]
layer_0/tile_data = PackedInt32Array(2752577, 65541, 1, 2687041, 393221, 2, 2621505, 393221, 0, 2555969, 65541, 1, 2490433, 65541, 1, 2490434, 65541, 0, 2490435, 65541, 1, 2555971, 65541, 1, 2621507, 393221, 0, 2621506, 393221, 0, 2687042, 393221, 2, 2752578, 65541, 1, 2687043, 393221, 2, 2555970, 65541, 1, 2752575, 65541, 1, 2687039, 393221, 2, 2621503, 393221, 0, 2555967, 131077, 1, 2490431, 65541, 1, 2490432, 131077, 0, 2555968, 65541, 1, 2621504, 393221, 0, 2687040, 393221, 2, 2752576, 65541, 1, 2687038, 393221, 2, 2621502, 393221, 0, 2555966, 5, 2, 2490430, 65541, 1, 2621501, 393221, 0, 2621500, 393221, 0, 2621499, 393221, 0, 2621498, 393221, 0, 2621497, 393221, 0, 2687037, 393221, 2, 2687036, 393221, 2, 2687035, 393221, 2, 2687034, 393221, 2, 2687033, 393221, 2, 2621508, 393221, 0, 2621509, 393221, 0, 2621510, 393221, 0, 2621511, 393221, 0, 2621512, 393221, 0, 2687044, 393221, 2, 2687045, 393221, 2, 2687046, 393221, 2, 2687047, 393221, 2, 2687048, 393221, 2, 2555961, 5, 1, 2555962, 131077, 1, 2555963, 65541, 1, 2555964, 65541, 1, 2555965, 131077, 1, 2555972, 131077, 0, 2555973, 5, 0, 2555974, 65541, 1, 2555975, 65541, 1, 2555976, 65541, 0, 2490440, 5, 2, 2490439, 65541, 1, 2490438, 65541, 1, 2490437, 65541, 0, 2490436, 65541, 1, 2490429, 65541, 1, 2490428, 131077, 0, 2490427, 65541, 1, 2490426, 131077, 1, 2490425, 65541, 1, 2752569, 65541, 1, 2752570, 65541, 1, 2752571, 131077, 1, 2752572, 65541, 1, 2752573, 65541, 1, 2752574, 65541, 1, 2752579, 65541, 1, 2752584, 131077, 2, 2752583, 131077, 1, 2752582, 5, 0, 2752581, 65541, 1, 2752580, 65541, 1, 2621513, 327685, 3, 2687049, 393221, 2, 2687050, 458757, 2, 2621514, 458757, 1, 2555977, 327685, 1, 2490441, 327685, 1, 2555978, 458757, 1, 2490442, 458757, 1, 2424906, 458757, 1, 2359370, 458757, 1, 2424905, 327685, 1, 2359369, 327685, 1, 2752585, 5, 0, 2752586, 65541, 1, 2752587, 65541, 1, 2687051, 65541, 1, 2621515, 65541, 1, 2555979, 131077, 2, 2490443, 65541, 1, 2424907, 65541, 1, 2359371, 131077, 1, 2359372, 65541, 1, 2424908, 65541, 1, 2490444, 65541, 1, 2555980, 5, 0, 2621516, 65541, 2, 2687052, 65541, 1, 2752588, 65541, 1)
layer_1/tile_data = PackedInt32Array(2490436, 196614, 0, 2424900, 65539, 1, 2359364, 65539, 0, 2293828, 3, 0, 2293827, 3, 0, 2293826, 3, 0, 2293825, 3, 0, 2359360, 3, 0, 2359359, 3, 0, 2359358, 3, 0, 2359357, 3, 0, 2424893, 65539, 1, 2424894, 65539, 1, 2359361, 3, 0, 2359362, 3, 0, 2359363, 3, 0, 2359365, 3, 0, 2293824, 3, 0, 2293823, 3, 0, 2293822, 3, 0, 2293821, 3, 0, 2293820, 3, 0, 2424898, 65539, 1, 2424899, 65539, 1, 2424892, 65539, 1, 2424901, 65539, 1, 2424897, 65539, 1, 2424896, 65539, 1, 2424895, 65539, 1, 2359356, 3, 0, 2293829, 3, 0, 2424889, 65539, 1, 2424890, 65539, 1, 2424891, 65539, 1, 2424902, 65539, 1, 2424903, 65539, 1, 2424904, 65539, 1, 2359368, 3, 0, 2359367, 65539, 0, 2359366, 3, 0, 2359355, 65539, 0, 2359354, 3, 0, 2359353, 3, 0, 2293817, 3, 0, 2293818, 3, 0, 2293819, 3, 0, 2293830, 3, 0, 2293831, 3, 0, 2293832, 3, 0, 2490434, 65542, 0, 2490435, 131078, 0)
layer_2/y_sort_enabled = true
layer_2/z_index = 2
layer_2/tile_data = PackedInt32Array(2293817, 393219, 2, 2293818, 393219, 2, 2293819, 393219, 2, 2293820, 393219, 2, 2293821, 393219, 2, 2293822, 393219, 2, 2293823, 393219, 2, 2293824, 393219, 2, 2293825, 393219, 2, 2293826, 393219, 2, 2293827, 393219, 2, 2293828, 393219, 2, 2293829, 393219, 2, 2293830, 393219, 2, 2293831, 393219, 2, 2293832, 458755, 2, 2293816, 327683, 2, 2752569, 393219, 0, 2752570, 393219, 0, 2752571, 393219, 0, 2752572, 393219, 0, 2752573, 393219, 0, 2752574, 393219, 0, 2752575, 393219, 0, 2752576, 393219, 0, 2752577, 393219, 0, 2752578, 393219, 0, 2752579, 393219, 0, 2752580, 393219, 0, 2752581, 393219, 0, 2752582, 393219, 0, 2752583, 393219, 0, 2752584, 393219, 0, 2752568, 327683, 0, 2818104, 327683, 1, 2818105, 393219, 1, 2818106, 393219, 1, 2818107, 393219, 1, 2818108, 393219, 1, 2818109, 393219, 1, 2818110, 393219, 1, 2818111, 393219, 1, 2818112, 393219, 1, 2818113, 393219, 1, 2818114, 393219, 1, 2818115, 393219, 1, 2818116, 393219, 1, 2818117, 393219, 1, 2818118, 393219, 1, 2818119, 393219, 1, 2818120, 393219, 1, 2752585, 393219, 0, 2752586, 393219, 0, 2752587, 393219, 0, 2752588, 327683, 3, 2687052, 327683, 1, 2621516, 327683, 1, 2555980, 327683, 1, 2490444, 327683, 1, 2424908, 327683, 1, 2359372, 327683, 1, 2293836, 327683, 0, 2293837, 393219, 0, 2818124, 393219, 1, 2818123, 393219, 1, 2818122, 393219, 1, 2818121, 393219, 1, 2818125, 393219, 1, 2752589, 393219, 1, 2687053, 393219, 1, 2621517, 393219, 1, 2555981, 393219, 1, 2490445, 393219, 1, 2424909, 393219, 1, 2359373, 393219, 1)
layer_3/tile_data = PackedInt32Array(2490435, 131079, 0, 2490434, 65543, 0, 2490436, 196615, 0)
layer_4/y_sort_enabled = true
layer_4/tile_data = PackedInt32Array(2490435, 131080, 0, 2490430, 9, 3, 2359358, 9, 1, 2424894, 9, 2, 2293823, 65545, 0, 2359359, 65545, 1, 2424895, 65545, 2, 2490431, 65545, 3, 2293824, 131081, 0, 2359360, 131081, 1, 2424896, 131081, 2, 2490432, 131081, 3, 2359361, 196617, 1, 2424897, 196617, 2, 2490433, 196617, 3, 2359354, 10, 1, 2424890, 10, 2, 2490426, 10, 3, 2293819, 65546, 0, 2359355, 65546, 1, 2424891, 65546, 2, 2490427, 65546, 3, 2293820, 131082, 0, 2359356, 131082, 1, 2424892, 131082, 2, 2490428, 131082, 3, 2359357, 196618, 1, 2424893, 196618, 2, 2490429, 196618, 3, 2359365, 17, 1, 2424901, 17, 2, 2490437, 17, 3, 2359366, 65553, 1, 2424902, 65553, 2, 2490438, 65553, 3, 2293831, 131089, 0, 2359367, 131089, 1, 2424903, 131089, 2, 2490439, 131089, 3, 2359368, 196625, 1, 2424904, 196625, 2, 2490440, 196625, 3, 2293832, 196625, 0, 2490434, 65544, 0, 2490436, 196616, 0, 2555970, 262152, 0, 2555972, 262152, 0)
layer_6/name = "shadow"
layer_6/z_index = 1
layer_6/tile_data = PackedInt32Array(2555961, 393241, 2, 2555962, 393241, 2, 2555963, 393241, 2, 2555964, 393241, 2, 2555965, 393241, 2, 2555966, 393241, 2, 2555967, 393241, 2, 2555968, 393241, 2, 2555969, 393241, 2, 2555970, 393241, 2, 2555971, 393241, 2, 2555972, 393241, 2, 2555973, 393241, 2, 2555974, 393241, 2, 2555975, 393241, 2, 2555976, 393241, 2, 2555977, 458777, 2, 2490441, 458777, 1, 2424905, 458777, 1, 2359369, 458777, 1, 2293833, 458777, 1, 2490440, 393241, 1, 2490439, 393241, 1, 2490438, 393241, 1, 2490437, 393241, 1, 2490436, 393241, 1, 2490435, 393241, 1, 2490434, 393241, 1, 2490433, 393241, 1, 2490432, 393241, 1, 2490431, 393241, 1, 2490430, 393241, 1, 2490429, 393241, 1, 2490428, 393241, 1, 2490427, 393241, 1, 2490426, 393241, 1, 2490425, 393241, 1, 2424889, 393241, 1, 2359353, 393241, 1, 2293817, 393241, 1, 2293818, 393241, 1, 2293819, 393241, 1, 2293820, 393241, 1, 2293821, 393241, 1, 2293822, 393241, 1, 2293823, 393241, 1, 2293824, 393241, 1, 2293825, 393241, 1, 2293826, 393241, 1, 2293827, 393241, 1, 2293828, 393241, 1, 2293829, 393241, 1, 2293830, 393241, 1, 2293831, 393241, 1, 2293832, 393241, 1, 2359368, 393241, 1, 2359367, 393241, 1, 2424903, 393241, 1, 2424904, 393241, 1, 2424902, 393241, 1, 2424901, 393241, 1, 2424900, 393241, 1, 2424899, 393241, 1, 2424898, 393241, 1, 2424897, 393241, 1, 2424896, 393241, 1, 2424895, 393241, 1, 2424894, 393241, 1, 2424893, 393241, 1, 2424892, 393241, 1, 2424891, 393241, 1, 2424890, 393241, 1, 2359354, 393241, 1, 2359355, 393241, 1, 2359356, 393241, 1, 2359357, 393241, 1, 2359358, 393241, 1, 2359359, 393241, 1, 2359360, 393241, 1, 2359361, 393241, 1, 2359362, 393241, 1, 2359363, 393241, 1, 2359364, 393241, 1, 2359365, 393241, 1, 2359366, 393241, 1)

[node name="Actionable" parent="TileMap" instance=ExtResource("2_uy6f1")]
position = Vector2(1919, 1268)
dialogue_resource = ExtResource("3_egqk6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Actionable"]
position = Vector2(0, -36)
shape = SubResource("CircleShape2D_wcvuq")

[node name="Christina" parent="." instance=ExtResource("2_4f0vb")]
position = Vector2(1238, 595)

[node name="Camera2D" type="Camera2D" parent="Christina"]
zoom = Vector2(6, 6)
limit_left = 793
limit_top = 476
limit_right = 1451
limit_bottom = 709
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="cabin_f_transition_point" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="cabin_f_transition_point"]
position = Vector2(1016, 556)
shape = SubResource("CircleShape2D_oehen")

[node name="dining_transition_point" type="Area2D" parent="."]
position = Vector2(1241, 561)

[node name="CollisionShape2D" type="CollisionShape2D" parent="dining_transition_point"]
position = Vector2(-1, -6)
shape = SubResource("CircleShape2D_64qhm")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.196078, 0.176471, 0.611765, 1)

[node name="vertical_path_transition_point" type="Area2D" parent="."]
position = Vector2(1315, 466)

[node name="CollisionShape2D" type="CollisionShape2D" parent="vertical_path_transition_point"]
position = Vector2(43, 0)
shape = SubResource("RectangleShape2D_dn5jm")

[node name="four_way_transition_point" type="Area2D" parent="."]
position = Vector2(783, 667)

[node name="CollisionShape2D" type="CollisionShape2D" parent="four_way_transition_point"]
position = Vector2(0, -58.5)
shape = SubResource("RectangleShape2D_oxxgf")

[node name="clancy" type="CharacterBody2D" parent="."]
position = Vector2(1153, 557)

[node name="Sprite2D" type="Sprite2D" parent="clancy"]
texture = ExtResource("7_yp5pe")
hframes = 4
vframes = 4
frame = 12

[node name="Actionable_2" parent="clancy" instance=ExtResource("2_uy6f1")]
dialogue_resource = ExtResource("8_qdhgp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="clancy/Actionable_2"]
shape = SubResource("CircleShape2D_pywer")

[connection signal="body_entered" from="cabin_f_transition_point" to="." method="_on_cabin_f_transition_point_body_entered"]
[connection signal="body_exited" from="cabin_f_transition_point" to="." method="_on_cabin_f_transition_point_body_exited"]
[connection signal="body_entered" from="dining_transition_point" to="." method="_on_dining_transition_point_body_entered"]
[connection signal="body_exited" from="dining_transition_point" to="." method="_on_dining_transition_point_body_exited"]
[connection signal="body_entered" from="vertical_path_transition_point" to="." method="_on_vertical_path_transition_point_body_entered"]
[connection signal="body_exited" from="vertical_path_transition_point" to="." method="_on_vertical_path_transition_point_body_exited"]
[connection signal="body_entered" from="four_way_transition_point" to="." method="_on_four_way_transition_point_body_entered"]
[connection signal="body_exited" from="four_way_transition_point" to="." method="_on_four_way_transition_point_body_exited"]
